istio-crds-single-service/example-apps.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-mesh-node-app-1
  labels:
    app: node-app
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
      version: v1
  template:
    metadata:
      # annotations:
      #   sidecar.istio.io/inject: "true"
      labels:
        app: node-app
        version: v1
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/apps-example/service-mesh-node-app-1:latest
          ports:
            - containerPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-mesh-node-app-2
  labels:
    app: node-app
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: node-app
      version: v2
  template:
    metadata:
      # annotations:
      #   sidecar.istio.io/inject: "true"
      labels:
        app: node-app
        version: v2
    spec:
      containers:
        - name: app
          image: image-registry.openshift-image-registry.svc:5000/apps-example/service-mesh-node-app-2:latest
          ports:
            - containerPort: 8080

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: node-app
    service: node-app
  name: node-app
spec:
  selector:
    app: node-app
  ports:
    - port: 8080
      name: http
